# opGL

./: .gitignore  BasicShader.shader  CMakeLists.txt  PRs.sln  Plans.txt  Renderer.cpp  Renderer.h  Shader.cpp  Shader.h  VertexArray.cpp  VertexBuffer.cpp  VertexBufferLayout.cpp  VertexBufferLayout.h  imgui.ini  main.cpp  opGL.code-workspace  plans.txt  Пр1.docx  Пр2.docx  Пр3.docx
Dependencies/assimp/samples/SimpleTexturedDirectx11/SimpleTexturedDirectx11/: ModelLoader.h
Dependencies/glad/: CMakeLists.txt
Dependencies/glad/include/glad/: glad.h
Dependencies/glad/src/: glad.c
Dependencies/stb_image/: CMakeLists.txt
Kursovaya/: Задание на КР.docx  Методические рекомендации по написанию курсовой работы.doc  ПРИЛОЖЕНИЕ Г1_ТИТУЛЬНЫЙ ЛИСТ_КУРСОВАЯ РАБОТА_ВО.docx
Kursovaya/examples/: ZADANIE_NA_KR_KGG.docx
edu/: edu.vcxproj  edu.vcxproj.filters  imgui.ini
edu/Tests/: Test.cpp  Test.h  TestCamera.cpp  TestCamera.h  TestClearColor.cpp  TestClearColor.h  TestCollision.cpp  TestCollision.h  TestCube.cpp  TestCube.h  TestLighting.cpp  TestLighting.h  TestModel.cpp  TestModel.h  TestMovingSquare.cpp  TestMovingSquare.h  TestPR5.cpp  TestPR5.h  TestPR6.cpp  TestPR6.h  TestPR7.cpp  TestPR7.h  TestShadow.cpp  TestShadow.h  testpr4_1.cpp  testpr4_1.h  testpr4_2.cpp  testpr4_2.h
edu/openGLabs/: IndexBuffer.cpp  IndexBuffer.h  Shader.cpp  Shader.h  Texture.cpp  Texture.h  VertexArray.cpp  VertexArray.h  VertexBuffer.cpp  VertexBuffer.h  myMesh.cpp  myMesh.h  myModel.cpp  myModel.h  myVertex.cpp  myVertex.h
edu/physics/: pAABB.h  pBody.cpp  pBody.h  pCollisions.cpp  pCollisions.h  pManifold.h  pTransform.h  pVector.h  pWorld.cpp  pWorld.h
edu/res/: Ancient_Vase.mtl  BaseShader.vs  BasicShader.fs  BasicShader.shader  BasicShader.vs  TextureShader.fs  TextureShader.shader  TextureShader.vs  cubeShader.fs  cubeShader.shader  lightShader.shader  lightShader.vs  meshShader.fs  meshShader.vs
edu/res/PR6/: pinkSphere.mtl  sphereShader.fs  sphereShader.shader
edu/res/backpack/: modelShader.fs  modelShader.shader
edu/res/capybar/: capybar.mtl
edu/res/capybarbie/: capybarbie.blend11111111  capybarbie.mtl
edu/res/cube/: bBoxShader.fs  bBoxShader.vs
edu/src/: IndexBuffer.cpp  IndexBuffer.h  Renderer.cpp  Renderer.h  Shader.cpp  Shader.h  Texture.cpp  Texture.h  VertexArray.cpp  VertexArray.h  VertexBuffer.cpp  VertexBuffer.h  VertexBufferLayout.cpp  VertexBufferLayout.h  bBox.cpp  bBox.h  cameraHandler.cpp  cameraHandler.h  loader.cpp  loader.h  main.cpp  movable.h  myCamera.cpp  myCamera.h  myLight.cpp  myLight.h  myMesh.cpp  myMesh.h  myModel.cpp  myModel.h  myVertex.cpp  myVertex.h  newMesh.cpp  newMesh.h  pBody.cpp  pBody.h  pCollisions.cpp  pCollisions.h  pPhysicsScene.cpp  pPhysicsScene.h  (+17 more)
